--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="primary">#1C2E46</color>
     <color name="primary_dark">#142232</color>
     <color name="primary_text">#212121</color>
+    <color name="selected_colour">#494965</color>
     <color name="secondary_text">#757575</color>
     <color name="white">#FFFFFFFF</color>
     <color name="input_background">#ECECEC</color>
